// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCloud should render and behave correctly 1`] = `
<div class="sk-tag-cloud">
  <div class="sk-tag-cloud-option sk-tag-cloud__item is-active" style="font-size: 1em;" data-qa="option" data-key="a">
    <div data-qa="label" class="sk-tag-cloud-option__text">A translated</div>
  </div>
  <div class="sk-tag-cloud-option sk-tag-cloud__item is-disabled" style="font-size: 1.1em;" data-qa="option" data-key="b">
    <div data-qa="label" class="sk-tag-cloud-option__text">B translated</div>
  </div>
  <div class="sk-tag-cloud-option sk-tag-cloud__item is-active" style="font-size: 1.2em;" data-qa="option" data-key="c">
    <div data-qa="label" class="sk-tag-cloud-option__text">C translated</div>
  </div>
  <div class="sk-tag-cloud-option sk-tag-cloud__item" style="font-size: 1.5em;" data-qa="option" data-key="d">
    <div data-qa="label" class="sk-tag-cloud-option__text">d translated</div>
  </div>
</div>
`;

exports[`TagCloud should sort items 1`] = `
<div class="sk-tag-cloud">
  <div class="sk-tag-cloud-option sk-tag-cloud__item is-active" style="font-size: 1em;" data-qa="option" data-key="a">
    <div data-qa="label" class="sk-tag-cloud-option__text">a translated</div>
  </div>
  <div class="sk-tag-cloud-option sk-tag-cloud__item" style="font-size: 1.1em;" data-qa="option" data-key="b">
    <div data-qa="label" class="sk-tag-cloud-option__text">B translated</div>
  </div>
  <div class="sk-tag-cloud-option sk-tag-cloud__item is-active" style="font-size: 1.2em;" data-qa="option" data-key="c">
    <div data-qa="label" class="sk-tag-cloud-option__text">C translated</div>
  </div>
  <div class="sk-tag-cloud-option sk-tag-cloud__item" style="font-size: 1.5em;" data-qa="option" data-key="d">
    <div data-qa="label" class="sk-tag-cloud-option__text">d translated</div>
  </div>
</div>
`;
